force-app/main/default/objects/Tech_Convenio_Modificatorio__c/Tech_Convenio_Modificatorio__c.object-meta.xml
<CustomObject>
    <label>Convenio Modificatorio</label>
    <nameField>
        <displayFormat>Con_Mod-{0000}</displayFormat>
        <label>No Convenio Modificatorio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convenios Modificatorios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>