force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracto</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Convenios Modificatorios</relationshipLabel>
    <relationshipName>Convenios_Modificatorios1</relationshipName>
    <type>Lookup</type>
</CustomField>