force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>