force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Diferencia_Monto__c.field-meta.xml
<CustomField>
    <fullName>Diferencia_Monto__c</fullName>
    <label>Diferencia Monto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>