force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>