force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Nueva_Fecha_Fin__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Fecha_Fin__c</fullName>
    <label>Nueva Fecha Fin</label>
    <type>Date</type>
</CustomField>