force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Nuevo_Valor_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Valor_Contrato__c</fullName>
    <label>Nuevo Valor Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>