force-app/main/default/objects/Tech_Convenio_Modificatorio__c/fields/Numero_Convenio__c.field-meta.xml
<CustomField>
    <fullName>Numero_Convenio__c</fullName>
    <displayFormat>CONV-{0000}</displayFormat>
    <label>Número de convenio</label>
    <type>AutoNumber</type>
</CustomField>